syntax = "proto3";

package inventory;

service InventoryService {
  rpc ReserveBook (ReserveBookRequest) returns (ReserveBookResponse);
  rpc CheckAvailability (CheckAvailabilityRequest) returns (CheckAvailabilityResponse);
  rpc ReturnBook (ReturnBookRequest) returns (ReturnBookResponse);
}

message ReserveBookRequest {
  int32 book_id = 1;
}

message ReserveBookResponse {
  bool success = 1;
  string message = 2;
}

message CheckAvailabilityRequest {
  int32 book_id = 1;
}

message CheckAvailabilityResponse {
  bool disponible = 1;
}

message ReturnBookRequest {
  int32 book_id = 1;
}

message ReturnBookResponse {
  bool success = 1;
  string message = 2;
}